# napari-mass

./: .gitignore  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  README.md  environment.yml  environment_align.yml  environment_napari04.yml  parameters_template.yml  project_template.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.napari-hub/: DESCRIPTION.md
notes/: install_notes.md  running_containter_how_to.md  testing_setup.md
resources/: project_template.mass.yml  project_template.yml  template.massproject.yml
src/: features.py
src/napari_mass/: DataModel.py  ExternalTspSolver.py  ImageSource.py  Imaging.py  OmeSource.py  OmeZarrSource.py  ParamControl.py  PathControl.py  Point.py  QtViewerModelWrap.py  Section.py  Stitcher.py  TiffSource.py  TiffTileMetadata.py  TiffTileSource.py  Zarr.py  ZarrSource.py  __init__.py  _widget.py  debug.py  features.py  napari.yaml  napari0.yaml  parameters.py  point_matching.py  section_detection.py  util.py
src/napari_mass/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_mass/file/: DataFile.py  FileDict.py  MagcFile.py  csv_file.py  resources.py
src/napari_mass/image/: color_conversion.py  normalisation.py  util.py
src/napari_mass/resources/: template.massproject.yml
src/napari_mass/testing/: datafile_conversion.py  datafile_test.py  image_test.py  optical_flow_testing.py
